ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbnb-ingress
  namespace: airbnb
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: airbb.serghini.me
      http:
        paths:
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: service-auth
                port:
                  number: 8081
          - path: /api/v1/listings
            pathType: Prefix
            backend:
              service:
                name: service-listing
                port:
                  number: 8082
          - path: /api/v1/bookings
            pathType: Prefix
            backend:
              service:
                name: service-booking
                port:
                  number: 8083
          - path: /api/v1/payments
            pathType: Prefix
            backend:
              service:
                name: service-payment
                port:
                  number: 8084
          - path: /api/v1/conversations
            pathType: Prefix
            backend:
              service:
                name: service-chat
                port:
                  number: 8085
          - path: /api/v1/reviews
            pathType: Prefix
            backend:
              service:
                name: service-review
                port:
                  number: 8086
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: service-chat
                port:
                  number: 8085
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
